fixed overflow in slider

--- a/src/components/molecules/slider/slider.scss
+++ b/src/components/molecules/slider/slider.scss
@@ -10,7 +10,8 @@
   border-left: 1px solid #eee;
   box-sizing: border-box;
   width: 600px;
-
+  overflow-x: hidden;
+  
   @media screen and (max-width: 768px) {
     width: 100%;
   }
